src/components/header.module.scss
/*
External Modules
*/

@use '../styles/variables.scss' as *;

.header {
  padding: 1rem 0;
}

.title {
  color: $black;
  font-size: 2rem;
  font-family: $displayFont;
  text-decoration: none;
  letter-spacing: -2px;
}

.nav-list {
  display: flex;
  list-style-type: none;
  margin: 0;
}

.nav-item {
  color: $gray3;
  font-size: 0.9rem;
  margin-right: 1.3rem;
  text-decoration: none;
}

.nav-item:hover {
  color: $gray6;
}

.active-nav-item {
  color: $black;
}

